--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Kronikle</string>
+    <string name="app_name_upper">KRONIKLE</string>
 
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
