--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,14 @@
     <string name="app_name">Kronikle</string>
     <string name="app_name_upper">KRONIKLE</string>
 
+    <string name="your_personal">Your Personal</string>
+    <string name="string_1">Task Manager</string>
+    <string name="string_2">Habit Tracker</string>
+    <string name="string_3">To-Do List</string>
+    <string name="string_4">Time Manager</string>
+    <string name="string_5">Project Manager</string>
+    <string name="string_6">Imaginary Friend</string>
+
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
 
