--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,13 @@
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
 
+    <string name="email">EMAIL</string>
+    <string name="password">PASSWORD</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="guest">Continue as a Guest</string>
+    <string name="or_sign_in_with">Or Sign In With</string>
+    <string name="facebook">Facebook</string>
+    <string name="google">Google</string>
+
 
 </resources>
