--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="password">PASSWORD</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="guest">Continue as a Guest</string>
-    <string name="or_sign_in_with">Or Sign In With</string>
+    <string name="or_sign_in_with">or sign in with</string>
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
 
