Removed color attribute to all items and added them to the theme for easy color change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
 
-    <string name="name">NAME</string>
+    <string name="first_name">FIRST NAME</string>
     <string name="last_name">LAST NAME</string>
     <string name="confirm_password">CONFIRM PASSWORD</string>
 
