--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,23 +11,35 @@
     <string name="string_5">Project Manager</string>
     <string name="string_6">Imaginary Friend</string>
 
-    <!--Strings to Sign In & Sign Up-->
+    <!--Strings for Sign In & Sign Up-->
+    <string name="or_sign_in_with">or sign in with</string>
+
+    <!--Buttons for Sign In & Sign Up-->
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="guest">Continue as a Guest</string>
+    <string name="facebook">Facebook</string>
+    <string name="google">Google</string>
 
+    <!--EditText for Sign In & Sign Up-->
     <string name="first_name">FIRST NAME</string>
     <string name="last_name">LAST NAME</string>
     <string name="email">EMAIL</string>
-    <string name="error_email">Invalid email address</string>
     <string name="password">PASSWORD</string>
-    <string name="error_password">Password must be 8+ characters</string>
-
     <string name="confirm_password">CONFIRM PASSWORD</string>
-    <string name="forgot_password">Forgot Password?</string>
-    <string name="guest">Continue as a Guest</string>
-    <string name="or_sign_in_with">or sign in with</string>
-    <string name="facebook">Facebook</string>
-    <string name="google">Google</string>
+
+    <!--Error Messages for Sign In & Sign Up-->
+    <string name="error_email_sif">Enter a valid email address</string>
+    <string name="error_password_sif">Enter a valid password (8+ characters)</string>
+
+    <string name="error_first_name_suf">First Name can only made up of letters</string>
+    <string name="error_last_name_suf">Last Name can only made up of letters</string>
+    <string name="error_email_suf">Email must have a valid format</string>
+    <string name="error_password_suf">Password needs to be 8+ characters and have numbers and letters</string>
+    <string name="error_confirm_password_suf">Both passwords must match</string>
+
+
 
 
 
