-Added new strings for motos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="string_3">Time Manager</string>
     <string name="string_4">To-Do List</string>
     <string name="string_5">Project Manager</string>
-    <string name="string_6">Reminder</string>
+    <string name="string_6">Goal Tracker</string>
 
     <!--Strings for Sign In & Sign Up-->
     <string name="or_sign_in_with">or sign in with</string>
