--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <!--Buttons for Sign In & Sign Up-->
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
-    <string name="forgot_password">Forgot Password?</string>
+    <string name="forgot_password">Forgot Your Password?</string>
     <string name="guest">Continue as a Guest</string>
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
@@ -36,6 +36,9 @@
     <string name="error_last_name_suf">Last Name can only be made up of letters</string>
     <string name="error_email_suf">Email must have a valid format</string>
     <string name="error_password_suf">Password must have 8+ characters</string>
+
+    <!--Forgot Password Pop-Up-->
+    <string name="forgot_password_pop_up">Please enter your email address below to reset your password</string>
 
 
 
