--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <!--Shared Strings-->
     <string name="submit">Submit</string>
     <string name="close">Close</string>
+    <string name="continue_message">Continue</string>
 
     <!--Strings for the apps intro-->
     <string name="your_personal">Your Personal</string>
@@ -22,12 +23,15 @@
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
     <string name="forgot_password">Forgot Your Password?</string>
-    <string name="forgot_password_dialog">Enter your email address below to reset it</string>
+    <string name="forgot_password_dialogue">Enter your email address below to reset it</string>
     <string name="email_submitted">Email Submitted</string>
-    <string name="email_submitted_dialog">If your email address is in our database you will get an email to reset your password</string>
+    <string name="email_submitted_dialogue">If your email address is in our database you will get an email to reset your password</string>
+    <string name="continue_guest">Continue as a Guest</string>
+    <string name="continue_guest_dialogue">Your information will be stored locally, if lost you will not be able to recover it unless backed up</string>
+    <string name="welcome">Welcome to Kronikle</string>
+    <string name="welcome_dialogue">Please backup your information!</string>
 
 
-    <string name="guest">Continue as a Guest</string>
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
 
