- Started working on menu drawer - Added heart icon to Main Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="tasks">Tasks</string>
     <string name="habits">Habits</string>
     <string name="timers">Timers</string>
+    <string name="heart">Heart</string>
 
 
 </resources>
