--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,9 +58,9 @@
 
     <!--Menu-->
     <string name="home">Home</string>
-    <string name="dashboard">Dashboard</string>
+    <string name="activity">Activity</string>
     <string name="my_account">My Account</string>
-    <string name="contact">Contact</string>
+    <string name="contact_us">Contact Us</string>
     <string name="info">Info</string>
     <string name="settings">Settings</string>
     <string name="sign_out">Sign Out</string>
