--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,11 +59,16 @@
     <!--Menu-->
     <string name="home">Home</string>
     <string name="activity">Activity</string>
-    <string name="my_account">My Account</string>
+    <string name="profile">Profile</string>
     <string name="contact_us">Contact Us</string>
     <string name="info">Info</string>
     <string name="settings">Settings</string>
     <string name="sign_out">Sign Out</string>
+
+    <!--Profile-->
+    <string name="profile_picture">Profile Picture</string>
+    <string name="profile_full_name">Ever Barillas</string>
+    <string name="profile_email">everalf1995@gmail.com</string>
 
 
 </resources>
