- Added a circle button to main activity - Added 3 new icons for circle button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,11 @@
     <string name="timers">Timers</string>
     <string name="heart">Heart</string>
 
+    <!--Circle Button-->]
+    <string name="add_task">Add a Task</string>
+    <string name="add_habit">Add a Habit</string>
+    <string name="add_timer">Add a Timer</string>
+
     <!--Menu-->
     <string name="home">Home</string>
     <string name="activity">Activity</string>
