- Changed wait length before onBackPress to close the app so it matches the toast - Added new activities to match their current name - Added activities to add tasks, habits, and timers - Added waveView for wave animations - Added icon for "back" button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,11 @@
     <string name="add_habit">Add a Habit</string>
     <string name="add_timer">Add a Timer</string>
 
+    <!--Circle Button-->]
+    <string name="new_task">New Task</string>
+    <string name="new_habit">New Habit</string>
+    <string name="new_timer">New Timer</string>
+
     <!--Menu-->
     <string name="home">Home</string>
     <string name="activity">Activity</string>
