- Started working on cards for new task activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,5 +74,13 @@
     <string name="profile_full_name">Ever Barillas</string>
     <string name="profile_email">everalf1995@gmail.com</string>
 
+    <!--Task-->
+    <string name="task_title">Task Title</string>
+    <string name="task_type">Type of Task</string>
+
+    <!--Shared-->
+    <string name="description">Description</string>
+
+
 
 </resources>
