- In SignInFragment when an invalid format for email or password is entered the editText shakes
- Initialized the items from card 1 in NewTaskActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,6 @@
 
     <!--Shared-->
     <string name="description">Description</string>
-
-
+    <string name="add_new_entry">Add New Entry +</string>
 
 </resources>
